apps/online-boutique/overlays/production/deny-all.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: online-boutique
spec: {}
